# snake-opengl

./: CMakeLists.txt  README.md
include/: controller.hpp  food.hpp  map.hpp  shader.hpp  snake.hpp
shader/: mesh.frag  mesh.geom  snake_frag.glsl  snake_vert.glsl
source/: controller.cpp  food.cpp  main.cpp  map.cpp  shader.cpp  snake.cpp
